--- a/src/lib/feedback/snackbar/style.css
+++ b/src/lib/feedback/snackbar/style.css
@@ -1,17 +1,23 @@
 /* prettier-ignore */
 .WuiSnackbar {
-  display: flex;
+  display: none !important;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 350px;
+  max-width: 400px;
+  min-width: 300px;
   min-height: 50px;
   position: fixed;
+  transition: transform 0.3s ease;
   z-index: 9999;
+}
+
+.WuiSnackbar--visible {
+  display: flex !important;
 }
 
 .WuiSnackbar--top {
   top: var(--space-md);
-  transform: translate(-50%, 0);
+  transform: translate(-50%, );
 }
 
 .WuiSnackbar--top-right {
@@ -34,19 +40,22 @@
 
 .WuiSnackbar--right {
   top: 50%;
+  transform: translate(calc(100% + var(--space-md)), -50%);
   right: var(--space-md);
+}
+
+.WuiSnackbar--visible.WuiSnackbar--right {
   transform: translate(0, -50%);
 }
 
 .WuiSnackbar--bottom {
   bottom: var(--space-md);
-  transform: translate(-50%, 0);
 }
 
 .WuiSnackbar--bottom-right {
   bottom: var(--space-md);
   right: var(--space-md);
-  transform: translate(0, 0);
+  /* transform: translate(0, 0); */
 }
 
 .WuiSnackbar--bottom-left {
@@ -65,8 +74,4 @@
   flex-shrink: 0;
   margin-left: auto;
   user-select: none;
-}
-
-.WuiSnackbar__body {
-  width: 100%;
 }
