fix: correct input label and error position, size

--- a/src/lib/inputs/base/style.css
+++ b/src/lib/inputs/base/style.css
@@ -55,7 +55,7 @@
 
 div.WuiInput__prefix>*,
 div.WuiInput__suffix>* {
-  border-radius: inherit !important;
+  border-radius: inherit;
   width: 100% !important;
   height: 100% !important;
 }
