--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -88,7 +88,7 @@
   --color-disabled: var(--color-neutral-3);
   --color-on-disabled: var(--color-neutral-6);
 
-  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
   --space-ss: 0.1875rem;
   --space-xs: 0.3125rem;
