--- a/src/lib/inputs/base/style.css
+++ b/src/lib/inputs/base/style.css
@@ -1,13 +1,47 @@
-.WuiInput:focus-within {
-  box-shadow: inset 0 0 0 0.7px var(--WuiColor-bg);
+.WuiInput.WuiColor-neutral.WuiVariant-outlined,
+.WuiInput.WuiColor-neutral.WuiVariant-soft,
+.WuiInput.WuiColor-neutral.WuiVariant-plain {
+  color: var(--color-neutral-8);
 }
 
-.WuiInput.WuiColor-neutral:focus-within {
-  --WuiColor-bg: var(--color-primary);
+.WuiInput.WuiVariant-plain.WuiColor-primary {
+  background-color: var(--color-primary-0);
 }
 
-.WuiInput.WuiColor-neutral.WuiVariant-outlined:focus-within {
-  border-color: var(--color-primary);
+.WuiInput.WuiVariant-plain.WuiColor-neutral,
+.WuiInput.WuiVariant-plain.WuiColor-black,
+.WuiInput.WuiVariant-plain.WuiColor-white {
+  background-color: var(--color-neutral-0);
+}
+
+.WuiInput.WuiVariant-plain.WuiColor-success {
+  background-color: var(--color-success-0);
+}
+
+.WuiInput.WuiVariant-plain.WuiColor-danger {
+  background-color: var(--color-danger-0);
+}
+
+.WuiInput.WuiVariant-plain.WuiColor-warning {
+  background-color: var(--color-warning-0);
+}
+
+.WuiInput:focus-within:not(.WuiVariant-solid):not(.WuiColor-neutral) {
+  box-shadow: inset 0 0 0 0.5px var(--WuiColor-bg);
+}
+
+.WuiInput.WuiColor-neutral:not(.WuiVariant-solid):focus-within {
+  box-shadow: inset 0 0 0 0.5px var(--color-primary-5);
+  border-color: var(--color-primary-5);
+}
+
+.WuiInput.WuiVariant-solid.WuiColor-neutral:focus-within {
+  --WuiColor-bg: var(--color-primary-5) !important;
+}
+
+.WuiInput.WuiVariant-soft,
+.WuiInput.WuiVariant-plain {
+  border: 1px solid transparent;
 }
 
 .WuiInput.WuiVariant-soft:focus-within,
@@ -17,10 +51,8 @@
 
 .WuiInput__input {
   background-color: transparent !important;
-  border: none;
   color: inherit;
   height: 100%;
-  margin: 0;
   outline: none;
   width: 100%;
 }
