--- a/src/lib/inputs/radio/style.css
+++ b/src/lib/inputs/radio/style.css
@@ -1,8 +1,4 @@
 .WuiRadio {
-  --WuiRadio-thumb-display: none;
-  --WuiRadio-size-sm: 18px;
-  --WuiRadio-size-md: 22px;
-  --WuiRadio-size-lg: 26px;
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -19,17 +15,17 @@
 }
 
 .WuiRadio:hover input:not(:checked)+.WuiRadio__thumb {
-  box-shadow: inset 0 0 0 0.7px var(--WuiColor-bg);
+  box-shadow: inset 0 0 0 0.5px var(--WuiColor-bg);
 }
 
 .WuiRadio__thumb::after {
   background-color: var(--WuiColor-bg);
   border-radius: inherit;
   content: '';
-  display: var(--WuiRadio-thumb-display);
+  display: var(--WuiRadio-thumb-display, none);
   height: 100%;
-  width: 100%;
   transition: transform 0.2s ease-in-out;
+  width: 100%;
 }
 
 .WuiRadio__thumb.WuiVariant-solid::after {
