--- a/src/lib/inputs/select/style.css
+++ b/src/lib/inputs/select/style.css
@@ -1,3 +1,43 @@
+.WuiSelect__combobox.WuiVariant-plain.WuiColor-primary {
+  background-color: var(--color-primary-0);
+}
+
+.WuiSelect__combobox.WuiVariant-plain.WuiColor-neutral,
+.WuiSelect__combobox.WuiVariant-plain.WuiColor-black,
+.WuiSelect__combobox.WuiVariant-plain.WuiColor-white {
+  background-color: var(--color-neutral-0);
+}
+
+.WuiSelect__combobox.WuiVariant-plain.WuiColor-success {
+  background-color: var(--color-success-0);
+}
+
+.WuiSelect__combobox.WuiVariant-plain.WuiColor-danger {
+  background-color: var(--color-danger-0);
+}
+
+.WuiSelect__combobox.WuiVariant-plain.WuiColor-warning {
+  background-color: var(--color-warning-0);
+}
+
+.WuiSelect__combobox.WuiVariant-soft,
+.WuiSelect__combobox.WuiVariant-plain {
+  border: 1px solid transparent;
+}
+
+.WuiSelect__combobox.WuiVariant-soft:focus-within,
+.WuiSelect__combobox.WuiVariant-plain:focus-within {
+  border-color: var(--WuiColor-bg);
+}
+
+.WuiSelect:focus-within .WuiSelect__combobox.WuiColor-neutral {
+  --WuiColor-bg: var(--color-primary-5) !important;
+}
+
+.WuiSelect:focus-within .WuiSelect__combobox:not(.WuiVariant-solid) {
+  box-shadow: inset 0 0 0 0.5px var(--WuiColor-bg);
+}
+
 .WuiSelect__combobox__placeholder {
   opacity: 0.5;
 }
