--- a/src/lib/inputs/switch/style.css
+++ b/src/lib/inputs/switch/style.css
@@ -6,6 +6,11 @@
 
 .WuiSwitch__thumb {
   background-color: var(--WuiColor-bg);
+  border-radius: inherit;
+  display: block;
+  height: 100%;
+  transition: all 0.15s ease-in-out;
+  width: calc(100% / 2);
 }
 
 .WuiColor-solid .WuiSwitch__thumb {
