--- a/src/lib/utils/backdrop/style.css
+++ b/src/lib/utils/backdrop/style.css
@@ -1,19 +1,18 @@
-:global(html):has(dialog[open]) {
-  overflow: hidden !important;
-}
-
 .WuiBackdrop {
-  animation: fade 0.5s ease normal;
+  animation: fade 0.3s ease normal;
   border: 0;
-  max-width: 100vw !important;
-  max-height: 100vh !important;
-  width: 100vw !important;
-  height: 100vh !important;
+  inset: 0px;
+  max-width: 100vw;
+  max-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   outline: 0;
   padding: var(--space-xs);
-  inset: 0px;
   overflow: hidden;
-  -webkit-tap-highlight-color: transparent;
+}
+
+.WuiBackdrop[open] {
+  overflow: hidden !important;
 }
 
 .WuiBackdrop--transparent-true {
@@ -26,10 +25,8 @@
 }
 
 .WuiBackdrop>* {
-  /* background-color: var(--color-surface);
-  border-radius: var(--radius); */
-  max-width: 80vw !important;
-  max-height: calc(100vh - calc(var(--space-nm) * 2)) !important;
+  max-width: calc(100vw - calc(var(--space-xs) * 2));
+  max-height: calc(100vh - calc(var(--space-xs) * 2));
   overflow-y: auto;
 }
 
