--- a/src/lib/utils/surface/style.css
+++ b/src/lib/utils/surface/style.css
@@ -1,123 +1,44 @@
-.WuiColor-primary {
-  --WuiColor-bg: var(--color-primary);
-  --WuiColor-on-bg: var(--color-white);
-  --WuiColor-bg-soft: var(--color-selection-container);
-  --WuiColor-on-bg-soft: var(--color-primary);
+.WuiSurface {
+  color: var(--WuiColor-on-bg);
 }
 
-.WuiColor-neutral {
-  --WuiColor-bg: var(--color-neutral);
-  --WuiColor-on-bg: var(--color-white);
-  --WuiColor-bg-soft: var(--color-neutral-container);
-  --WuiColor-on-bg-soft: var(--color-black-2);
+.WuiSurface[data-has-height="true"] {
+  height: var(--WuiDimen-height);
 }
 
-.WuiColor-success {
-  --WuiColor-bg: var(--color-success);
-  --WuiColor-on-bg: var(--color-white);
-  --WuiColor-bg-soft: var(--color-success-container);
-  --WuiColor-on-bg-soft: var(--color-success);
-}
-
-.WuiColor-warning {
-  --WuiColor-bg: var(--color-warning);
-  --WuiColor-on-bg: var(--color-white);
-  --WuiColor-bg-soft: var(--color-warning-container);
-  --WuiColor-on-bg-soft: var(--color-warning);
-}
-
-.WuiColor-danger {
-  --WuiColor-bg: var(--color-error);
-  --WuiColor-on-bg: var(--color-white);
-  --WuiColor-bg-soft: var(--color-error-container);
-  --WuiColor-on-bg-soft: var(--color-error);
-}
-
-.WuiColor-black {
-  --WuiColor-bg: var(--color-black-4);
-  --WuiColor-on-bg: var(--color-white);
-  --WuiColor-bg-soft: var(--color-neutral-3);
-  --WuiColor-on-bg-soft: var(--color-black-4);
-}
-
-.WuiColor-white {
-  --WuiColor-bg: var(--color-white);
-  --WuiColor-on-bg: var(--color-black-4);
-  --WuiColor-bg-soft: var(--color-neutral-1);
-  --WuiColor-on-bg-soft: var(--color-black-4);
-}
-
-.WuiShape-rounded {
-  border-radius: var(--radius);
-}
-
-.WuiShape-pill {
-  border-radius: 9999px;
-}
-
-.WuiShape-circle {
-  border-radius: 50%;
-}
-
-.WuiShape-square {
-  border-radius: 0 !important;
+.WuiSurface[data-has-width="true"] {
+  width: var(--WuiDimen-width, auto);
 }
 
 .WuiVariant-solid {
-  background-color: var(--WuiColor-bg, var(--color-primary));
-  border: 0;
-  color: var(--WuiColor-on-bg, var(--color-white));
-}
-
-.WuiVariant-outlined {
-  background-color: inherit;
-  color: var(--WuiColor-bg, var(--color-primary));
-  border: 1px solid var(--WuiColor-bg, var(--color-primary));
-}
-
-.WuiVariant-outlined.WuiColor-neutral {
-  color: var(--color-black-3, var(--color-primary));
-  border-color: var(--color-neutral-4, var(--color-primary));
+  background-color: var(--WuiColor-bg);
 }
 
 .WuiVariant-soft,
 .WuiVariant-mixed {
-  background-color: var(--WuiColor-bg-soft, var(--color-selection-container));
-  border: 1px solid transparent;
-  color: var(--WuiColor-on-bg-soft, var(--color-primary));
-}
-
-/* A mix of soft and outlined */
-.WuiVariant-mixed {
-  border-color: var(--WuiColor-bg, var(--color-primary));
-}
-
-.WuiVariant-mixed.WuiColor-neutral {
-  border-color: var(--color-neutral-4, var(--color-primary));
+  background-color: var(--WuiColor-bg-soft);
 }
 
 .WuiVariant-plain,
-.WuiVariant-none {
-  background-color: transparent;
-  border: 1px solid transparent;
-  color: var(--WuiColor-on-bg-soft, var(--color-primary));
+.WuiVariant-none,
+.WuiVariant-outlined {
+  background-color: inherit;
+}
+
+.WuiVariant-outlined,
+.WuiVariant-mixed {
+  border: 1px solid var(--WuiColor-bg);
 }
 
 .WuiClickable {
   cursor: pointer;
 }
 
-.WuiClickable.WuiColor-primary:disabled,
-.WuiClickable.WuiColor-neutral:disabled,
-.WuiClickable.WuiColor-success:disabled,
-.WuiClickable.WuiColor-warning:disabled {
-  --WuiColor-bg: var(--color-disabled);
-  --WuiColor-bg-soft: var(--color-disabled);
-  --WuiColor-on-bg-soft: var(--color-black-1);
-}
-
-.WuiClickable:disabled {
-  color: var(--color-black-1);
+.WuiClickable:disabled,
+.WuiInput--disabled {
+  --WuiColor-bg: var(--color-neutral-2) !important;
+  --WuiColor-bg-soft: var(--color-neutral-2) !important;
+  color: var(--color-neutral-6);
   cursor: default;
   pointer-events: none;
 }
@@ -138,11 +59,24 @@
 }
 
 .WuiClickable.WuiVariant-outlined:not(:disabled):hover,
-.WuiClickable.WuiVariant-outlined:not(:disabled):focus-visible {
-  background-color: var(--WuiColor-bg-soft, var(--color-selection-container));
-}
-
+.WuiClickable.WuiVariant-outlined:not(:disabled):focus-visible,
 .WuiClickable.WuiVariant-plain:not(:disabled):hover,
 .WuiClickable.WuiVariant-plain:not(:disabled):focus-visible {
   background-color: var(--WuiColor-bg-soft);
+}
+
+.WuiShape-rounded {
+  border-radius: var(--radius);
+}
+
+.WuiShape-pill {
+  border-radius: 9999px;
+}
+
+.WuiShape-circle {
+  border-radius: 50%;
+}
+
+.WuiShape-square {
+  border-radius: 0 !important;
 }
