fix: make input extend surface correctly

--- a/src/lib/display/avatar/style.css
+++ b/src/lib/display/avatar/style.css
@@ -13,8 +13,7 @@
   width: auto;
 }
 
-.WuiAvatarGroup .WuiAvatar+.WuiAvatar {
-  /* White box shadow */
+.WuiAvatarGroup>*+* {
   box-shadow: 0 0 0 1px var(--color-surface) !important;
 }
 
