--- a/src/lib/inputs/textarea/style.css
+++ b/src/lib/inputs/textarea/style.css
@@ -32,32 +32,80 @@
   --WuiLabel-color: var(--color-disabled);
 }
 
-.WuiTextArea:focus-within {
-  box-shadow: inset 0 0 0 0.7px var(--WuiColor-bg);
+.WuiTextArea.WuiColor-neutral.WuiVariant-outlined,
+.WuiTextArea.WuiColor-neutral.WuiVariant-soft,
+.WuiTextArea.WuiColor-neutral.WuiVariant-plain {
+  color: var(--color-neutral-8);
 }
 
-.WuiTextArea.WuiColor-neutral:focus-within {
-  --WuiColor-bg: var(--color-primary);
+.WuiTextArea.WuiVariant-plain.WuiColor-primary {
+  background-color: var(--color-primary-0);
 }
 
-.WuiTextArea.WuiColor-neutral.WuiVariant-outlined:focus-within {
-  border-color: var(--color-primary);
+.WuiTextArea.WuiVariant-plain.WuiColor-neutral,
+.WuiTextArea.WuiVariant-plain.WuiColor-black,
+.WuiTextArea.WuiVariant-plain.WuiColor-white {
+  background-color: var(--color-neutral-0);
+}
+
+.WuiTextArea.WuiVariant-plain.WuiColor-success {
+  background-color: var(--color-success-0);
+}
+
+.WuiTextArea.WuiVariant-plain.WuiColor-danger {
+  background-color: var(--color-danger-0);
+}
+
+.WuiTextArea.WuiVariant-plain.WuiColor-warning {
+  background-color: var(--color-warning-0);
+}
+
+.WuiTextArea:focus-within:not(.WuiVariant-solid):not(.WuiColor-neutral) {
+  box-shadow: inset 0 0 0 0.5px var(--WuiColor-bg);
+}
+
+.WuiTextArea.WuiColor-neutral:not(.WuiVariant-solid):focus-within {
+  box-shadow: inset 0 0 0 0.5px var(--color-primary-5);
+  border-color: var(--color-primary-5);
+}
+
+.WuiTextArea.WuiVariant-solid.WuiColor-neutral:focus-within {
+  --WuiColor-bg: var(--color-primary-5) !important;
+}
+
+.WuiTextArea.WuiVariant-soft,
+.WuiTextArea.WuiVariant-plain {
+  border: 1px solid transparent;
 }
 
 .WuiTextArea.WuiVariant-soft:focus-within,
 .WuiTextArea.WuiVariant-plain:focus-within {
-  border: 1px solid var(--WuiColor-bg);
+  border-color: var(--WuiColor-bg);
 }
 
 .WuiTextArea__input {
-  background-color: transparent !important;
+  background-color: unset !important;
   border: none;
   color: inherit;
+  font: inherit;
   line-height: 1.5;
   margin: 0;
   resize: none;
   outline: none;
   width: 100%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+.WuiTextArea__input::-webkit-outer-spin-button,
+.WuiTextArea__input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.WuiTextArea__input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .WuiTextArea__prefix,
@@ -70,13 +118,14 @@
   flex-wrap: nowrap;
   flex-shrink: 0;
   justify-content: center;
+  height: 100%;
   text-decoration: none;
   overflow: hidden;
 }
 
 div.WuiTextArea__prefix>*,
 div.WuiTextArea__suffix>* {
-  border-radius: inherit !important;
+  border-radius: inherit;
   line-height: 30px !important;
   width: 100% !important;
   height: 100% !important;
