--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 300 400;
   font-display: block;
-  src: url('./fonts/material-symbols-rounded.woff2') format('woff2');
+  src: url('https://cdn.watfoe.com/fonts/material-symbols-rounded.woff2') format('woff2');
 }
 
 :root {
