--- a/src/lib/inputs/input/style.css
+++ b/src/lib/inputs/input/style.css
@@ -1,33 +1,11 @@
-.WuiInput__root {
-  border: 0;
-  position: relative;
+.WuiInput--neutral:focus-within .WuiInput__label {
+  color: var(--color-primary-5);
 }
 
-.WuiInput--primary {
-  --WuiLabel-color: var(--color-primary-5);
+.WuiInput__root:invalid .WuiInput__label {
+  color: var(--color-danger-5);
 }
 
-.WuiInput--neutral {
-  --WuiLabel-color: var(--color-neutral-7);
-}
-
-.WuiInput--neutral:focus-within {
-  --WuiLabel-color: var(--color-primary-5);
-}
-
-.WuiInput--success {
-  --WuiLabel-color: var(--color-success-5);
-}
-
-.WuiInput--warning {
-  --WuiLabel-color: var(--color-warning-5);
-}
-
-.WuiInput--danger,
-.WuiInput__root:invalid {
-  --WuiLabel-color: var(--color-danger-5);
-}
-
-.WuiInput:disabled {
-  --WuiLabel-color: var(--color-neutral-4);
+.WuiInput__root:disabled .WuiInput__label {
+  color: var(--color-neutral-5);
 }
