--- a/src/lib/inputs/radio/style.css
+++ b/src/lib/inputs/radio/style.css
@@ -14,6 +14,10 @@
   --WuiRadio-thumb-display: block;
 }
 
+.WuiRadio input:checked+.WuiRadio__thumb.WuiColor-neutral {
+  --WuiColor-bg: var(--color-primary-5) !important;
+}
+
 .WuiRadio:hover input:not(:checked)+.WuiRadio__thumb {
   box-shadow: inset 0 0 0 0.5px var(--WuiColor-bg);
 }
